Made checkboxes for individual todos 40% larger using css transform, I longer support Internet Explorer in my personal projects

--- a/app/styles/components/_todo.scss
+++ b/app/styles/components/_todo.scss
@@ -8,6 +8,11 @@
     margin: 0;
   }
 
+  input[type=checkbox] {
+    cursor: pointer;
+    transform:scale(1.4, 1.4);
+  }
+
   > :first-child {
     margin-right: 1rem;
   }
